--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h2>Get In Touch</h2>
           <h3>You got any recommendations for a place to swim at?</h3>
           <p class="contact-message">Contact me and we'll go swim while you tell me what website you want.</p>
-          <a class="btn" href="mailto:joostej04@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:joostej04@gmail.com">CONTACT ME</a>
         </div>
       </div>
       <div class="bottom-container">
